--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.19.2",
     "maki": "^2.1.0",
     "mongoose": "^8.5.1",
-    "node-geocoder": "^4.3.0"
+    "node-geocoder": "^4.3.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
