--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -13,13 +13,14 @@
     {
       sparknet:
         {
+          num_epochs: 100,
           split: [0.8, 0.9],
           dataloader:
             {
               window:
                 {
-                  prediction_horizon: 24,
-                  sequence_length: 48,
+                  input_width: 48,
+                  label_width: 24,
                 },
               batch_size: 64,
               shuffle: False
