--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -14,6 +14,7 @@
       sparknet:
         {
           num_epochs: 100,
+          learning_rate: 0.0001,
           split: [0.8, 0.9],
           dataloader:
             {
@@ -24,7 +25,12 @@
                 },
               batch_size: 64,
               shuffle: False
+            },
+          loss:
+            {
+              function:
             }
+
         }
     }
 }
