--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -13,8 +13,8 @@
     {
       sparknet:
         {
-          num_epochs: 100,
-          learning_rate: 0.0001,
+          num_epochs: 10,
+          learning_rate: 0.001,
           split: [0.8, 0.9],
           dataloader:
             {
@@ -23,14 +23,9 @@
                   input_width: 48,
                   label_width: 24,
                 },
-              batch_size: 64,
-              shuffle: False
-            },
-          loss:
-            {
-              function:
+              batch_size: 32,
+              shuffle: True
             }
-
         }
     }
 }
