--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -13,9 +13,9 @@
     {
       sparknet:
         {
-          num_epochs: 10,
-          learning_rate: 0.001,
-          split: [0.8, 0.9],
+          num_epochs: 3,
+          learning_rate: 0.0001,
+          split: 0.9,
           dataloader:
             {
               window:
