--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -13,9 +13,9 @@
     {
       sparknet:
         {
-          num_epochs: 10,
+          num_epochs: 1,
           learning_rate: 0.0001,
-          split: 0.9,
+          split: [0.8, 0.9],
           dataloader:
             {
               window:
@@ -24,7 +24,7 @@
                   label_width: 24,
                 },
               batch_size: 24,
-              shuffle: True
+              shuffle: False
             }
         }
     }
