--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -24,7 +24,7 @@
                   label_width: 24,
                 },
               batch_size: 24,
-              shuffle: False
+              shuffle: True
             }
         }
     }
