--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -35,7 +35,7 @@
             },
           loss:
             {
-              function: 'MSELoss',
+              function: 'HuberLoss',
               HuberLoss:
                 {
                   params:
@@ -68,11 +68,11 @@
               split: [0.8, 0.9],
               window:
                 {
-                  input_width: 48,
+                  input_width: 24,
                   label_width: 24,
                 },
               batch_size: 32,
-              shuffle: True
+              shuffle: False
             }
         }
     }
