--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -6,74 +6,71 @@
       geojson: /home/phillip/repo/volue.spark/lede-mvlv-case-study/data/geojson/silver
     },
   ml: {
-        force_clean: True,
-        variant: SparkNet,
+    force_clean: True,
+    variant: LstmResNet,
   },
   params:
     {
-      sparknet:
+      num_epochs: 100,
+      optimizer:
         {
-          num_epochs: 30,
-          optimizer:
+          algorithm: 'Adam',
+          Adam:
             {
-              algorithm: 'Adam',
-              Adam:
+              params:
                 {
-                  params:
-                    {
-                      lr: 0.0001,
-                      betas: [0.9, 0.999]
-                    }
-                },
-              SGD:
-                {
-                    params:
-                      {
-                          lr: 0.001
-                      }
-                },
-            },
-          loss:
-            {
-              function: 'HuberLoss',
-              HuberLoss:
-                {
-                  params:
-                    {
-                      reduction: 'mean',
-                      delta: 0.1
-                    }
-                },
-              MSELoss:
-                {
-                  params:
-                      {
-                        reduction: 'sum',
-                      }
+                  lr: 0.0001,
+                  betas: [ 0.9, 0.999 ]
                 }
             },
-          metric:
+          SGD:
             {
-              function: 'MeanSquaredError',
-              MeanSquaredError:
+              params:
                 {
-                  params:
-                    {
-                      multioutput: 'uniform_average'
-                    },
+                  lr: 0.001
+                }
+            },
+        },
+      loss:
+        {
+          function: 'HuberLoss',
+          HuberLoss:
+            {
+              params:
+                {
+                  reduction: 'mean',
+                  delta: 0.1
+                }
+            },
+          MSELoss:
+            {
+              params:
+                {
+                  reduction: 'sum',
+                }
+            }
+        },
+      metric:
+        {
+          function: 'MeanSquaredError',
+          MeanSquaredError:
+            {
+              params:
+                {
+                  multioutput: 'uniform_average'
                 },
             },
-          dataloader:
+        },
+      dataloader:
+        {
+          split: [ 0.8, 0.9 ],
+          window:
             {
-              split: [0.8, 0.9],
-              window:
-                {
-                  input_width: 24,
-                  label_width: 24,
-                },
-              batch_size: 24,
-              shuffle: True
-            }
+              input_width: 48,
+              label_width: 24,
+            },
+          batch_size: 24,
+          shuffle: True
         }
     }
 }
