--- a/lib/ml/config.yaml
+++ b/lib/ml/config.yaml
@@ -7,11 +7,11 @@
     },
   ml: {
     force_clean: True,
-    variant: LstmResNet,
+    variant: ConvResNet,
   },
   params:
     {
-      num_epochs: 100,
+      num_epochs: 20,
       optimizer:
         {
           algorithm: 'Adam',
@@ -20,7 +20,8 @@
               params:
                 {
                   lr: 0.0001,
-                  betas: [ 0.9, 0.999 ]
+                  betas: [ 0.9, 0.999 ],
+                  weight_decay: 0.0
                 }
             },
           SGD:
@@ -63,14 +64,14 @@
         },
       dataloader:
         {
-          split: [ 0.8, 0.9 ],
+          split: [ 0.85, 0.95 ],
           window:
             {
               input_width: 48,
               label_width: 24,
             },
-          batch_size: 24,
-          shuffle: True
+          batch_size: 32,
+          shuffle: False
         }
     }
 }
